# scope_de_task

./: .env.example  .gitignore  AI_USAGE.md  DESIGN_DECISIONS.md  Makefile  README.md  bootstrap_minio.py  docker-compose.yaml  execution_plan.md  pyproject.toml  pyrightconfig.json  setup.sh
airflow/config/: airflow-init.sh  airflow.cfg
airflow/dags/ratings/: db_loader.py  ingestion_logic.py  raw_ingestion_dag.py
airflow/dags/utils/: dbt.py
docker/: airflow.Dockerfile  api.Dockerfile
docs/ai_conversations/: Fixing Rating Parser Issues.md  Refactoring Corporate Ratings Staging.md
dwh/: database.py
dwh/dbt/: README.md  dbt_project.yml  profiles.yml
dwh/dbt/macros/: generate_schema_name.sql
dwh/dbt/models/01_staging/: src_ingestion.yml  stg_corporate_financial_metrics.sql  stg_corporate_ratings.sql  stg_corporate_ratings.yml
dwh/dbt/models/03_intermediate/: int_upload_max_years.sql
dwh/dbt/models/05_marts/: dim_corporate_ratings.sql  dim_corporate_ratings.yml  exp_company_details.sql  fct_corporate_metrics.sql  fct_corporate_metrics.yml  fct_upload_audits.sql
dwh/dbt/tests/: assert_sum_of_industry_weights_is_one.sql
dwh/ingestion/: models.py  parser.py  schemas.py
fast_api/: main.py  schemas.py
fast_api/routers/: companies.py  snapshots.py  uploads.py
tests/: conftest.py  test_db_loader.py  test_parser.py  test_schemas.py
