[project]
name = "corporate-credit-rating-pipeline"
version = "0.1.0"
description = "A data pipeline and API for corporate credit rating data"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "sqlalchemy>=2.0.31",     # ORM for database models and SQL queries
    "psycopg[binary]>=3.2.1",  # PostgreSQL database driver
    "alembic>=1.13.2",        # Database migration tool for version controlling schema changes
    "pydantic>=2.8.2",        # Data validation and parsing using Python type hints
    "python-dotenv>=1.0.1",   # Loads configuration and secrets from the local .env file
    "tenacity>=8.5.0",        # Retry decorator for handling transient DB connection failures
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "watchfiles>=0.21.0",
    "boto3>=1.34.0",
]
pipeline = [
    "pandas>=2.2.2",
    "openpyxl>=3.1.5",
    "dbt-core>=1.11.0,<1.12.0",
    "dbt-postgres>=1.10.0,<1.12.0",
    "apache-airflow-providers-amazon>=9.3.0",
    "s3fs>=2024.3.0",
]

[dependency-groups]
dev = [
    "apache-airflow==3.3.0",
    "pytest>=8.2.2",
    "httpx>=0.27.0",
    "black>=24.4.2",
    "isort>=5.13.2",
]
